# AmdOpenCLTest01

./: CMakeLists.txt  GITHUB_MCP_INTEGRATION_NOTES.md  GITHUB_MCP_WORKFLOW.md  GITHUB_UPLOAD_INSTRUCTIONS.md  README.md  main.cpp
MemoryBank/: key_findings.md
Results/2025-10-16/: COMPLETE_COMPARISON_ANALYSIS.md
